@@ -91,6 +91,7 @@ config_main.ml: config.mlp $(ROOTDIR)/Makefile.config Makefile config.common.ml
 	    $(call SUBST,AS_HAS_DEBUG_PREFIX_MAP) \
 	    $(call SUBST,FORCE_INSTRUMENTED_RUNTIME) \
 	    $(call SUBST_STRING,BYTECODE_RUNTIME_ID) \
+	    $(call SUBST_STRING,ZINC_RUNTIME_ID) \
 	    $(call SUBST_STRING,NATIVE_RUNTIME_ID) \
 	    $< > $@
 	cat config.common.ml >> $@
