@@ -52,6 +52,7 @@ let flat_float_array = true
 let function_sections = false
 let afl_instrument = false
 let bytecode_runtime_id = ""
+let zinc_runtime_id = ""
 let native_runtime_id = ""
 let architecture = "none"
 let model = "default"
